--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.546.0",
-    "next": "15.5.6",
+    "next": "^16.0.10",
     "prisma": "^6.18.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -37,7 +37,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "15.5.6",
+    "eslint-config-next": "^16.0.10",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.0",
     "typescript": "^5"
